<resources>
    <string name="app_name">딜다이브</string>
    <string name="title_home">홈</string>
    <string name="title_search">검색</string>
    <string name="title_favorite">딜픽</string>
    <string name="title_event">이벤트</string>
    <string name="title_setting">설정</string>


    <string name="title_activity_detail_product">DetailProductActivity</string>

    <!-- 런쳐 화면 -->
    <string name="splash_text">스마트한 쇼핑 딜다이브</string>

    <!-- 공통 -->
    <string name="logo_title">D Mall</string>
    <string name="won">원</string>
    <string name="no_searchc_item">검색된 데이터가 없어요.\n다른 검색어로 검색해 보세요.</string>
    <string name="favorite_save">등록했어요!</string>
    <string name="ok">확인</string>
    <string name="no">취소</string>
    <string name="server_not_connecting">현재 네트워크가 불안정하여\n접속이 원활하지 않아요.\n\n인터넷 연결 상태를 확인해주세요.</string>
    <string name="req_update_message">새로운 업데이트 버전이 출시되었어요!\n원활한 앱 이용을 위해 최신버전으로 업데이트해주세요.</string>
    <string name="req_update">필수 업데이트 버전이 출시되었어요!\n안전한 앱 이용을 위해 최신버전으로 업데이트해주세요.</string>


    <!-- 홈 -->
    <string name="best_sale">Best Sale</string>
    <string name="top_products">인기 상품</string>
    <string name="best_totalView">모든 상품 보기</string>
    <string name="top_totalView">모든 상품 보기</string>
    <string name="alarm_popup_info">최저가/설정가 등의 알림 서비스를 받기 위해서는\n알림 권한을 활성화해야 합니다.\n다음 노출되는 알림 권한을 허용해 주세요. </string>


    <!-- 설정화면 -->
    <string name="setting_user_nick">%s님</string>
    <string name="setting_user_soical_id">%sID: %s</string>
    <string name="setting_title_default">일반</string>
    <string name="setting_use_info">딜다이브 사용법</string>
    <string name="setting_use_alarm">알림 설정</string>
    <string name="setting_title_support">고객센터</string>
    <string name="setting_privacy_text">개인정보 처리방침</string>
    <string name="setting_termsOfUse_text">이용약관</string>
    <string name="setting_app_version">앱 버전</string>
    <string name="setting_acc_delete">계정탈퇴</string>
    <string name="setting_acc_delete_success">계정 탈퇴되었어요.\n앱을 종료합니다.</string>
    <string name="setting_acc_delete_msg">탈퇴 시 계정의 모든 정보는 삭제되며 재가입 시에도 복구되지 않아요.\n<u>탈퇴하시겠어요?</u></string>
    <string name="setting_alarm_title">알림 권한 설정 안내</string>
    <string name="setting_alarm_info">알림 권한 요청을 거부하신 관계로 직접 알림 설정을 활성화 해주셔야되요. 아래 \&apos;설정 바로가기\&apos; 버튼을 통해 알림 권한 활성화 후 사용해주세요.</string>
    <string name="setting_alarm_set_go">설정 바로가기</string>


    <!-- 검색화면 -->
    <string name="search_recent_searches">최근 검색어</string>
    <string name="search_favorite_searches">인기 검색어</string>
    <string name="search_favorite_searches_no_data">최근 검색한 내용이 없어요.</string>
    <string name="search_orderByView">정렬 기준 선택</string>
    <string name="recommendationText">추천순</string>
    <string name="popularityText">인기순</string>
    <string name="lowPriceText">낮은 가격순</string>
    <string name="highPriceText">높은 가격순</string>


    <!-- 상품상세화면 -->
    <string name="detail_buy">상품확인</string>
    <string name="detail_favorite">상품확인</string>
    <string name="detail_terms">1. 딜다이브의 상품 정보는 주기적으로 업데이트하고 있으나 시차에 따라 쇼핑몰의 정보와 일치하지 않을 수 있습니다. 반드시 쇼핑몰의 정확한 정보를 확인하시기 바랍니다.\n2. 딜다이브는 파트너스 활동의 일환으로 이에 따른 일정액의 수수료를 쇼핑몰로부터 제공받을 수 있습니다. 발생한 수익금은 무료로 앱 운영을 하기위해 쓰여집니다.</string>
    <string name="no_chart">데이터가 쌓이면 시세 그래프를 만들어 드릴게요.</string>

    <string name="detail_favorite_setting">관심 상품 설정</string>
    <string name="detail_favorite_note">원하는 가격을 설정하시면\n알림을 받으실 수 있어요.\n관심상품 등록 후 나중에 알림 설정을 하실 수도 있어요!</string>
    <string name="detail_alarm_price">가격 알림 설정</string>
    <string name="detail_q_alarm_price">퀵 가격 설정</string>
    <string name="detail_alarm_solt">재입고 알림 설정</string>
    <string name="detail_save">저장하기</string>
    <string name="detail_price_difference">평균가 대비 시세</string>
    <string name="detail_average_price">평균시세</string>

    <string name="discount_1">-10%</string>
    <string name="discount_2">-15%</string>
    <string name="discount_3">-20%</string>

    <!-- 관심상품 화면 -->
    <string name="favorite_stock_alarm">재입고</string>
    <string name="favorite_low_price_alarm">최저가</string>
    <string name="favorite_all_product">관심 상품</string>
    <string name="favorite_all_product_nodata">등록된 관심 상품이 없어요.\n관심 있는 상품을 등록해 주세요.</string>


    <!-- 링크 공유 화면 -->
    <string name="share_adding">상품을 추가하고 있어요. 잠시만 기다려주세요.</string>
    <string name="share_add_product">상품 등록이 완료되었어요.</string>
    <string name="share_add_product_fail">지원하지 않는 쇼핑몰이에요.</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- 권한 화면 -->
    <string name="permission_dialog_main">서비스 이용을 위한\n앱 접근 권한 안내</string>
    <string name="permission_dialog_sub">편리한 서비스 이용을 위해 아래 항목의 접근 권한이 필요해요.</string>
    <string name="permission_dialog_required">필수 권한</string>
    <string name="permission_dialog_required_1">기기 및 앱 기록</string>
    <string name="permission_dialog_required_1_1">앱 버전 및 사용성 개선</string>
    <string name="permission_dialog_required_2">사용정보 접근 권한</string>
    <string name="permission_dialog_required_2_1">화면 공유 방지</string>
    <string name="permission_dialog_required_3">모든 패키지 쿼리</string>
    <string name="permission_dialog_required_3_1">단말에 설치된 앱 검사</string>

    <string name="permission_dialog_optional">선택 권한</string>
    <string name="permission_dialog_optional_1">알림</string>
    <string name="permission_dialog_optional_1_1">푸시 알림</string>
    <string name="permission_dialog_optional_1_2">▷ 최저가, 재입고 등의 알림 서비스를 받기 위해서는 알림 설정을 꼭 허용해주세요.</string>


    <!-- 알림 -->
    <string name="dmall_alarm_title">알림</string>
    <string name="product_alarm">상품 알림</string>
    <string name="default_alarm">일반 알림</string>
    <string name="alarm_nodata">아직 받은 알림이 없어요.</string>



    <string name="social_login">소셜 로그인</string>
    <string name="social_login_2">소셜\n로그인</string>

    <string name="kakao_key">cd6542e2cf71c211083caf3d8d5f8695</string>
    <string name="no_Acc_text">비회원 로그인</string>
    <string name="no_Acc_login_fail">비회원 로그인에 실패했어요.\n앱 종료 후 다시 시도해 주세요.</string>

    <string name="google_login_text">구글 로그인</string>
    <string name="google_success_login">구글 로그인 성공</string>
    <string name="google_failed_login">구글 로그인 실패</string>
    <string name="google_success_logout">로그아웃 되었습니다</string>
    <string name="google_status_login">이미 로그인 되어있습니다</string>
    <string name="google_default_web_client_id">764807957191-5jre0vn76o71kbalito7ovmqd9ks1i9h.apps.googleusercontent.com</string>



</resources>