<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_500"
    android:orientation="vertical"
    tools:context=".activity.PermissionActivity"
    android:id="@+id/permission_main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/permission_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        >


        <TextView
            style="@style/TextBlack.titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/permission_dialog_main"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            style="@style/TextBlack.bigLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:textStyle="bold"
            android:text="@string/permission_dialog_sub" />

        <TextView
            style="@style/TextBlack.largeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:text="@string/permission_dialog_required"
            android:textStyle="bold"
            android:textSize="16dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray_500" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_perm_device_information_24_white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlack.largeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:gravity="left"
                    android:text="@string/permission_dialog_required_1"
                    android:textStyle="bold"
                    android:textSize="16dp" />

                <TextView
                    style="@style/TextBlack.mediumStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="left"
                    android:text="@string/permission_dialog_required_1_1"
                    android:textSize="14dp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/TextBlack.largeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:textStyle="bold"
            android:text="@string/permission_dialog_optional"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_notifications_active_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlack.largeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:gravity="left"
                    android:text="@string/permission_dialog_optional_1"
                    android:textStyle="bold"
                    android:textSize="16dp" />

                <TextView
                    style="@style/TextBlack.mediumStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="left"
                    android:text="@string/permission_dialog_optional_1_1"
                    android:textSize="14dp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            style="@style/TextBlack.largeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="left"
            android:textStyle="bold"
            android:text="@string/permission_dialog_optional_1_2" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.8"
        android:background="@color/black_500"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            style="@style/TextWhite.largeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white_500"
            android:textStyle="bold"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>