<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:padding="4dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_favorite_setting"
            style="@style/TextWhite.largeStyle"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_500" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_favorite_note"
            style="@style/TextWhite.smallStyle"
            android:textColor="@color/gray_700"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/detail_alarm_price"
                style="@style/TextWhite.largeStyle"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_gravity="center"

                />

            <EditText
                android:id="@+id/hope_price"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="right"
                android:layout_gravity="center|right"
                android:textColorHint="#AAAAAA"
                style="@style/TextBlack.mediumStyle"
                android:autofillHints=""
                android:background="@drawable/share_search_box"
                android:textCursorDrawable="@drawable/text_cursor"
                android:singleLine="true"
                android:ems="10"
                android:hint=""
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/detail_alarm_solt"
                style="@style/TextWhite.largeStyle"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_gravity="center"
                />

            <CheckBox
                android:id="@+id/check"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_save"
            style="@style/TextBlack.largeStyle"
            android:background="@drawable/share_search_box"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>