<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_500"
    android:orientation="vertical"
    tools:context=".fragment.setting.SettingFragment">


    <TextView
        android:id="@+id/setting_login"
        style="@style/TextWhite.titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:text="로그인 버튼."
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/setting_title_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextWhite.titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="15dp"
            android:text="@string/setting_title_default"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_use_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextWhite.largeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="left"
            android:text="@string/setting_use_info"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:src="@drawable/baseline_chevron_right_24_white"
            />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/setting_title_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextWhite.titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="15dp"
            android:text="@string/setting_title_support"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextWhite.largeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="left"
            android:text="@string/setting_app_version"
             />

        <TextView
            android:id="@+id/app_version"
            style="@style/TextWhite.largeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="1.0"
             />

    </LinearLayout>

</LinearLayout>
