<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_500"
    android:orientation="vertical"
    android:id="@+id/fragment_search_linearlayout"
    tools:context=".fragment.search.SearchFragment">

    <LinearLayout
        android:id="@+id/editBoxLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/editTextSearchBox"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="50dp"
            android:background="@drawable/autocomplete_textview_border"
            android:completionThreshold="2"
            android:drawableEnd="@drawable/baseline_cancel_24_gray"
            android:ems="10"
            android:hint=""
            android:inputType="text"
            android:minHeight="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColorHint="#555555"
            android:textCursorDrawable="@drawable/text_cursor" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_search_24_white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextWhite.bigLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/search_recent_searches"
            android:textSize="22dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/search_favorite_searches_no_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextWhite.largeStyle"
                android:text="@string/search_favorite_searches_no_data"
                android:visibility="gone"
                android:gravity="center"
                android:padding="20dp"
                />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorite_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextWhite.bigLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/search_favorite_searches"
            android:textSize="22dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorite_searcher_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </LinearLayout>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white_500" />

    <LinearLayout
        android:id="@+id/searchNoItemMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        >

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/no_searchc_item"
           style="@style/TextWhite.bigLargeStyle"

           />

    </LinearLayout>

</LinearLayout>
